--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="col-sm">
         <button  type="button" class="btn btn-primary" onclick="myFunction()">Get score</button>
     </div>
-  <h3> <div class="col-sm"> Final Score:  <p class="text-nowrap" style="width: 8rem;" id="demo"></p></h3>
+ <div class="col-sm">    <h3> Final Score:  <p class="text-nowrap" " id="demo"></p></h3>
     </div>
      
 
