--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
           var x = Number(document.getElementById("Lesion").value)  + Number(document.getElementById("Ictal").value)  +
          Number(document.getElementById("Interictal").value)  + Number( document.getElementById("semiology").value) 
           + Number(document.getElementById("Neuropsychological").value)  ;
+     x =   Math.exp(x-0.3135)/(Math.exp(x-0.3135)+1);
           if (x>3.17)
             {
                 x= 'Focal ('+ x.toString() +')';
