--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
          Number(document.getElementById("Interictal").value)  + Number( document.getElementById("semiology").value) 
           + Number(document.getElementById("Neuropsychological").value)  ;
      x =   Math.exp(x-0.3135)/(Math.exp(x-0.3135)+1);
-          if (x>3.17)
+     x=x.toFixed(2) *100;
+          if (x>37.6)
             {
                 x= 'Focal ('+ x.toString() +')';
             }
