--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             {
                  x= 'Non-Focal ('+ x.toString() +')';
             }
-             x= x +' , this result has to be interpreted in the clinical context' 
+             x= x +' <br><p style="color:red"> This result has to be interpreted in the clinical context</p>' 
           document.getElementById("demo").innerHTML = x;
         }
         </script>
