--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="author" content="">
     <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
 
-    <title>Starter Template for Bootstrap</title>
+    <title>SENSE calculator</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/starter-template/">
 
@@ -146,7 +146,7 @@
             {
                  x= 'Non-Focal ('+ x.toString() +')';
             }
-             x= x +' <br><p style="color:red"> This result has to be interpreted in the clinical context</p>' 
+             x= x +' <br><p style="color:red"> This result has to be interpreted in the clinical context.</p>' 
           document.getElementById("demo").innerHTML = x;
         }
         </script>
