--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="author" content="">
     <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
 
-    <title>SENSE calculator</title>
+    <title>5-SENSEr</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/starter-template/">
 
