--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="author" content="">
     <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
 
-    <title>5-SENSE</title>
+    <title>5-SENSE calculator </title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/starter-template/">
 
@@ -56,7 +56,7 @@
 </header>
     <main role="main" class="container text-center ">
         <br>
-        <h1 class="mt-5">The SENSE calculator </h1>
+        <h1 class="mt-5">The 5-SENSE calculator </h1>
         <h2>Should you implant?</h2>
         <br>
       </main>
