--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         Select interictal EEG extent:
         <select id="Interictal" class="form-control">
           <option value=1.8056>no IEDs</option>
-          <option value=0>bilateral independent</option>
+          <option value=0>bilateral independent except for bi-temporal</option>
           <option value=1.1807>all others</option>
         </select>
       </div>
