--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <button  type="button" class="btn btn-primary" onclick="myFunction()">Get score</button>
     </div>
         <br><br>
- <div class="col-sm">    <h3> Final Score:  <p class="text-nowrap" " id="demo"></p></h3>
+ <div class="col-sm">    <h5> Final Score:  <p class="text-nowrap" " id="demo"></p></h5>
     </div>
      
 
@@ -146,7 +146,7 @@
             {
                  x= 'Non-Focal ('+ x.toString() +')';
             }
-             x= x +' <br><p style="color:red"> This result has to be interpreted in the clinical context.</p>' 
+             x= x +' <br><p style="color:red"> This result has to be interpreted <br> in the clinical context.</p>' 
           document.getElementById("demo").innerHTML = x;
         }
         </script>
